[gd_scene load_steps=25 format=2]

[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/dead_near_4.png" type="Texture" id=1]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/dead_near_5.png" type="Texture" id=2]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/ready_1.png" type="Texture" id=3]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/walk_5.png" type="Texture" id=4]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/attack2_1.png" type="Texture" id=5]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/attack2_2.png" type="Texture" id=6]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/dead_near_2.png" type="Texture" id=7]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/attack2_5.png" type="Texture" id=8]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/walk_6.png" type="Texture" id=9]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/attack2_6.png" type="Texture" id=10]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/walk_2.png" type="Texture" id=11]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/dead_near_6.png" type="Texture" id=12]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/attack2_4.png" type="Texture" id=13]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/attack2_3.png" type="Texture" id=14]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/dead_near_3.png" type="Texture" id=15]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/ready_2.png" type="Texture" id=16]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/ready_3.png" type="Texture" id=17]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/walk_1.png" type="Texture" id=18]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/walk_3.png" type="Texture" id=19]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/walk_4.png" type="Texture" id=20]
[ext_resource path="res://Asset/skeleton_sword/skeleton_sword/dead_near_1.png" type="Texture" id=21]
[ext_resource path="res://script/Skeleton.gd" type="Script" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "Attack1",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 12 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.75, 46 )

[node name="Skeleton" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 2, 1 )
collision_layer = 4
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["enemies"]]
position = Vector2( 31, -49 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "Walk"
playing = true

[node name="Floor_Detection" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 7.33333, 0.333334 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 26.5, -40 )
shape = SubResource( 2 )

[node name="Left_Ray" type="RayCast2D" parent="."]
position = Vector2( 31, -49 )
enabled = true
cast_to = Vector2( -50, 0 )

[node name="Right_Ray" type="RayCast2D" parent="."]
position = Vector2( 32, -49 )
enabled = true
cast_to = Vector2( 38, 0 )
